--- a/package.json
+++ b/package.json
@@ -31,14 +31,13 @@
   "homepage": "https://github.com/kurkle/chartjs-plugin-gradient#readme",
   "devDependencies": {
     "@kurkle/color": "^0.1.9",
-    "@rollup/plugin-node-resolve": "^8.4.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
     "eslint": "^7.13.0",
-    "eslint-config-chartjs": "^0.2.0",
-    "eslint-config-esnext": "^4.1.0",
+    "eslint-config-chartjs": "^0.3.0",
+    "eslint-plugin-es": "^4.1.0",
     "eslint-plugin-html": "^6.1.1",
-    "eslint-plugin-markdown": "^1.0.2",
+    "eslint-plugin-markdown": "^2.1.0",
     "rollup": "^2.33.2",
     "rollup-plugin-terser": "^7.0.2"
-  },
-  "dependencies": {}
+  }
 }
