--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "module": "dist/chartjs-plugin-gradient.ems.js",
   "scripts": {
     "build": "rollup -c",
-    "lint": "eslint samples/**/*.html samples/**/*.js src/**/*.js **/*.md",
-    "test": "npm run lint"
+    "dev": "karma start --auto-watch --no-single-run --browsers chrome",
+    "dev:ff": "karma start --auto-watch --no-single-run --browsers firefox",
+    "lint": "concurrently --group \"npm:lint-*\"",
+    "lint-js": "eslint \"test/**/*.js\" \"src/**/*.js\"",
+    "test": "cross-env NODE_ENV=test concurrently --group \"npm:test-*\"",
+    "test-karma": "karma start --auto-watch --single-run"
   },
   "repository": {
     "type": "git",
@@ -31,14 +35,29 @@
   },
   "homepage": "https://github.com/kurkle/chartjs-plugin-gradient#readme",
   "devDependencies": {
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "chart.js": "^3.5.0",
+    "chartjs-test-utils": "^0.3.0",
+    "concurrently": "^7.0.0",
+    "cross-env": "^7.0.3",
     "eslint": "^7.13.0",
     "eslint-config-chartjs": "^0.3.0",
     "eslint-plugin-es": "^4.1.0",
     "eslint-plugin-html": "^6.1.1",
     "eslint-plugin-markdown": "^2.1.0",
-    "rollup": "^2.33.2",
+    "fs-extra": "^10.0.0",
+    "karma": "^6.3.2",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage": "^2.0.3",
+    "karma-firefox-launcher": "^2.1.0",
+    "karma-jasmine": "^4.0.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "karma-rollup-preprocessor": "^7.0.7",
+    "mocha": "^9.1.3",
+    "pixelmatch": "^5.2.1",
+    "rollup": "^2.45.2",
+    "rollup-plugin-istanbul": "^3.0.0",
     "rollup-plugin-terser": "^7.0.2"
   },
   "peerDependencies": {
