--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,12 +8,25 @@ on:
 
 jobs:
   ci:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+      fail-fast: false
+
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v2
+      with:
+        cache: npm
+        node-version: 16
     - run: |
         npm ci
         npm run build
-        npm test
+        if [ "${{ runner.os }}" == "Windows" ]; then
+          npm test
+        else
+          xvfb-run --auto-servernum npm test
+        fi
+      shell: bash
