--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,25 +8,22 @@ on:
 
 jobs:
   ci:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest]
-      fail-fast: false
-
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js
-      uses: actions/setup-node@v2
-      with:
-        cache: npm
-        node-version: 16
-    - run: |
-        npm ci
-        npm run build
-        if [ "${{ runner.os }}" == "Windows" ]; then
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis (SonarCloud)
+      - name: Use Node.js
+        uses: actions/setup-node@v2
+        with:
+          cache: npm
+          node-version: 16
+      - run: |
+          npm ci
+          npm run build
           npm test
-        else
-          xvfb-run --auto-servernum npm test
-        fi
-      shell: bash
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
