--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "concurrently --group \"npm:lint-*\"",
     "lint-js": "eslint \"test/**/*.js\" \"src/**/*.js\"",
     "test": "cross-env NODE_ENV=test concurrently --group \"npm:test-*\"",
-    "test-karma": "karma start --auto-watch --single-run"
+    "test-karma": "karma start --auto-watch --single-run",
+    "test-lint": "npm run lint"
   },
   "repository": {
     "type": "git",
@@ -39,6 +40,7 @@
     "@rollup/plugin-node-resolve": "^13.0.0",
     "chart.js": "^3.5.0",
     "chartjs-test-utils": "^0.3.0",
+    "chartjs-adapter-luxon": "^1.1.0",
     "concurrently": "^7.0.0",
     "cross-env": "^7.0.3",
     "eslint": "^7.13.0",
@@ -54,6 +56,7 @@
     "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.5.4",
     "karma-rollup-preprocessor": "^7.0.7",
+    "luxon": "^2.0.1",
     "mocha": "^9.1.3",
     "pixelmatch": "^5.2.1",
     "rollup": "^2.45.2",
