--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,10 @@ jobs:
           npm ci
           npm run build
           xvfb-run --auto-servernum npm test
-      - uses: romeovs/lcov-reporter-action@v0.2.16
+      - name: Report code coverage
+        uses: zgosalvez/github-actions-report-lcov@v1
         with:
-          lcov-file: ./coverage/chrome/lcov.info
+          coverage-files: coverage/chrome/lcov.info
+          minimum-coverage: 80
+          artifact-name: code-coverage-report
           github-token: ${{ secrets.GITHUB_TOKEN }}
