--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "chart.js": "^3.5.0",
-    "chartjs-test-utils": "^0.3.0",
     "chartjs-adapter-luxon": "^1.1.0",
+    "chartjs-test-utils": "^0.4.0",
     "concurrently": "^7.0.0",
     "cross-env": "^7.0.3",
-    "eslint": "^7.13.0",
+    "eslint": "^8.12.0",
     "eslint-config-chartjs": "^0.3.0",
     "eslint-plugin-es": "^4.1.0",
     "eslint-plugin-html": "^6.1.1",
@@ -55,7 +55,7 @@
     "karma-firefox-launcher": "^2.1.0",
     "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.5.4",
-    "karma-rollup-preprocessor": "^7.0.7",
+    "karma-rollup-preprocessor": "7.0.7",
     "luxon": "^2.0.1",
     "mocha": "^9.1.3",
     "pixelmatch": "^5.2.1",
