--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Easy gradient colors for Chart.js",
   "main": "dist/chartjs-plugin-gradient.js",
   "module": "dist/chartjs-plugin-gradient.ems.js",
+  "types": "./types/index.d.ts",
   "scripts": {
     "build": "rollup -c",
     "dev": "karma start --auto-watch --no-single-run --browsers chrome",
@@ -19,7 +20,8 @@
     "url": "git+https://github.com/kurkle/chartjs-plugin-gradient.git"
   },
   "files": [
-    "dist/*.js"
+    "dist/*.js",
+    "types/*.d.ts"
   ],
   "keywords": [
     "chart.js",
@@ -38,6 +40,8 @@
   "devDependencies": {
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.19.0",
+    "@typescript-eslint/parser": "^5.19.0",
     "chart.js": "^3.5.0",
     "chartjs-adapter-luxon": "^1.1.0",
     "chartjs-test-utils": "^0.4.0",
@@ -61,7 +65,8 @@
     "pixelmatch": "^5.2.1",
     "rollup": "^2.45.2",
     "rollup-plugin-istanbul": "^3.0.0",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "typescript": "^4.6.3"
   },
   "peerDependencies": {
     "chart.js": ">=2.6.0"
