--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chartjs-plugin-gradient",
-  "version": "0.4.1",
+  "version": "0.5.0",
   "description": "Easy gradient colors for Chart.js",
   "main": "dist/chartjs-plugin-gradient.js",
   "module": "dist/chartjs-plugin-gradient.ems.js",
@@ -10,7 +10,7 @@
     "dev": "karma start --auto-watch --no-single-run --browsers chrome",
     "dev:ff": "karma start --auto-watch --no-single-run --browsers firefox",
     "lint": "concurrently --group \"npm:lint-*\"",
-    "lint-js": "eslint \"test/**/*.js\" \"src/**/*.js\"",
+    "lint-js": "eslint \"test/**/*.js\" \"src/**/*.js\" \"types/**/*.ts\"",
     "test": "cross-env NODE_ENV=test concurrently --group \"npm:test-*\"",
     "test-karma": "karma start --auto-watch --single-run",
     "test-lint": "npm run lint"
