--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.5.0",
   "description": "Easy gradient colors for Chart.js",
   "main": "dist/chartjs-plugin-gradient.js",
-  "module": "dist/chartjs-plugin-gradient.ems.js",
+  "module": "dist/chartjs-plugin-gradient.esm.js",
   "types": "./types/index.d.ts",
   "scripts": {
     "build": "rollup -c",
