--- a/package.json
+++ b/package.json
@@ -38,35 +38,35 @@
   },
   "homepage": "https://github.com/kurkle/chartjs-plugin-gradient#readme",
   "devDependencies": {
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.0.0",
+    "@rollup/plugin-json": "^5.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-terser": "^0.1.0",    
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "@typescript-eslint/parser": "^5.19.0",
-    "chart.js": "^3.5.0",
-    "chartjs-adapter-luxon": "^1.1.0",
-    "chartjs-test-utils": "^0.4.0",
-    "concurrently": "^7.0.0",
+    "chart.js": "^4.0.1",
+    "chartjs-adapter-luxon": "^1.3.0",
+    "chartjs-test-utils": "^0.5.0",
+    "concurrently": "^7.4.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.12.0",
     "eslint-config-chartjs": "^0.3.0",
     "eslint-plugin-es": "^4.1.0",
-    "eslint-plugin-html": "^6.1.1",
-    "eslint-plugin-markdown": "^2.1.0",
+    "eslint-plugin-html": "^7.1.0",
+    "eslint-plugin-markdown": "^3.0.0",
     "fs-extra": "^10.0.0",
     "karma": "^6.3.2",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage": "^2.0.3",
     "karma-firefox-launcher": "^2.1.0",
-    "karma-jasmine": "^4.0.1",
-    "karma-jasmine-html-reporter": "^1.5.4",
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.0.0",
     "karma-rollup-preprocessor": "7.0.7",
-    "luxon": "^2.0.1",
+    "luxon": "^3.1.0",
     "mocha": "^9.1.3",
     "pixelmatch": "^5.2.1",
-    "rollup": "^2.45.2",
-    "rollup-plugin-istanbul": "^3.0.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "typescript": "^4.6.3"
+    "rollup": "^3.3.0",
+    "rollup-plugin-istanbul": "^4.0.0",
+    "typescript": "^4.7.4"
   },
   "peerDependencies": {
     "chart.js": ">=2.6.0"
